--- a/src/index.css
+++ b/src/index.css
@@ -54,5 +54,7 @@ button {
 
 #root{
   width: 100%;
-  height: 100%;;
+  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
